package handler

import (
	"context"
	pb "thaily/proto/role"
)


func (h *Handler) CreateRoleSystem(ctx context.Context, req *pb.CreateRoleSystemRequest) (*pb.CreateRoleSystemResponse, error) {
	// TODO: Implement CreateRoleSystem
	return &pb.CreateRoleSystemResponse{}, nil
}

func (h *Handler) GetRoleSystem(ctx context.Context, req *pb.GetRoleSystemRequest) (*pb.GetRoleSystemResponse, error) {
	// TODO: Implement GetRoleSystem
	return &pb.GetRoleSystemResponse{}, nil
}

func (h *Handler) UpdateRoleSystem(ctx context.Context, req *pb.UpdateRoleSystemRequest) (*pb.UpdateRoleSystemResponse, error) {
	// TODO: Implement UpdateRoleSystem
	return &pb.UpdateRoleSystemResponse{}, nil
}

func (h *Handler) DeleteRoleSystem(ctx context.Context, req *pb.DeleteRoleSystemRequest) (*pb.DeleteRoleSystemResponse, error) {
	// TODO: Implement DeleteRoleSystem
	return &pb.DeleteRoleSystemResponse{}, nil
}

func (h *Handler) ListRoleSystems(ctx context.Context, req *pb.ListRoleSystemsRequest) (*pb.ListRoleSystemsResponse, error) {
	// TODO: Implement ListRoleSystems
	return &pb.ListRoleSystemsResponse{}, nil
}

